public class Main {
    public static void main(String[] args) {

        //creamos formas
    Forma circulo1 = new Circulo(1.0, "red", false);
    Forma rectangulo1 = new Rectangulo(1.0, 1.0, "red", false);
    Forma cuadrado1 = new Cuadrado(1.0, "red", false);

    }
}
